--- a/src/Components/Navbar/Navbar.css
+++ b/src/Components/Navbar/Navbar.css
@@ -1,50 +1,118 @@
-@import url("https://cdn.jsdelivr.net/npm/remixicon@2.5.0/fonts/remixicon.css");
-nav {
-  height: 80px;
-  width: 100%;
+
+body {
+  margin: 0;
+  padding: 0;
+  font-family:  sans-serif;
+  background-color: #fcfcfc;
+}
+
+.container {
+  max-width: 1100px;
+  margin: 0 auto;
+  padding: 0 15px;
   display: flex;
   justify-content: space-between;
   align-items: center;
+  height: 100%;
+}
+
+.navbar {
+  height: 60px;
+  /* background-color: #ffffff; */
   box-shadow: 0px 4px 50px rgba(0, 0, 0, 0.1);
-  padding: 0 10%;
-  font-family: sans-serif;
+  position: relative;
+}
+
+.logo {
+}
+
+.menu-icon {
+  display: none;
+}
+
+.nav-elements {
+}
+
+.nav-elements ul {
+  display: flex;
+  justify-content: space-between;
+  list-style-type: none;
+}
+
+.nav-elements ul li:not(:last-child) {
+  margin-right: 60px;
+}
+
+.nav-elements ul a{
   font-size: 16px;
-}
-
-.logout-button {
-  border: none;
-  margin-left: 15px;
-  font-size: 16px;
-  font-family: sans-serif;
-  background-color: transparent;
-  color: #1e90c2;
-}
-
-.logout-button:hover {
-  color: #1b4388;
-}
-
-.link {
+  font-weight: 400;
+  color: #2f234f;
   text-decoration: none;
-  margin-left: 15px;
+}
+.nav-elements ul button{
   font-size: 16px;
-  color: #1e90c2;
-  transition: color ease-in-out 300ms;
-}
-
-.margin-left {
-  margin-left: 12px;
-}
-
-.link:hover {
-  color: #1b4388;
-}
-
-.active-link {
+  font-weight: 400;
+  color: #2f234f;
   text-decoration: none;
-  margin-left: 15px;
-  font-size: 16px;
-  transition: color ease-in-out 300ms;
-  color: #1e90c2;
-  border-bottom: 1px solid #1e90c2;
+}
+
+.nav-elements ul a.active {
+  color: #2f1366;
+  font-weight: 500;
+  position: relative;
+}
+
+.nav-elements ul a.active::after {
+  content: '';
+  position: absolute;
+  bottom: -4px;
+  left: 0;
+  width: 100%;
+  height: 2px;
+  background-color: #2f1366;
+}
+
+@media (max-width: 768px) {
+  .nav-elements ul li:not(:last-child) {
+    margin-right: 30px;
+  }
+}
+
+@media (max-width: 600px) {
+  .menu-icon {
+    display: block;
+    cursor: pointer;
+  }
+
+  .nav-elements {
+    position: absolute;
+    right: 0;
+    top: 50px;
+    background-color: rgb(255, 255, 255);
+    width: 100%;
+    height: 0;
+    /* height: calc(40vh - 30px); */
+    transition: all 0.3s ease-in-out;
+    overflow: hidden;
+  }
+
+  .nav-elements.active {
+    width: 100%;
+
+    /* height:calc(25vh - 25px); */
+    height:auto
+  }
+
+  .nav-elements ul {
+    display: flex;
+    flex-direction: column;
+    text-align: center;
+    padding-bottom:20px ;
+  }
+
+  .nav-elements ul li {
+    /* margin-right: unset; */
+    margin-right: 30px;
+    margin-top: 22px;
+  }
 }
